# witwin-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-witwin.yml
benchmark/: benchmark_mesh_sdf.py
tests/: conftest.py  test_geometry_sdf.py  test_geometry_smoke.py  test_scene_base.py
witwin/core/: __init__.py  material.py  math.py  mesh_sdf.slang  scene.py  scene_to_mitsuba.py
witwin/core/geometry/: __init__.py  base.py  mesh.py  mesh_sdf.py  primitives.py  smpl.py
