[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "witwin"
version = "0.0.1"
description = "Witwin - Multi-physics simulation platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]

[project.optional-dependencies]
maxwell = ["witwin-maxwell>=0.0.1"]
radar   = ["witwin-radar>=0.0.1"]
channel = ["witwin-channel>=0.0.1"]
genesis = ["witwin-genesis>=0.0.1"]
all     = [
    "witwin-maxwell>=0.0.1",
    "witwin-radar>=0.0.1",
    "witwin-channel>=0.0.1",
    "witwin-genesis>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["witwin"]
